<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Registration">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <TextView
            android:id="@+id/tvback"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_close_black_24dp"
            android:layout_marginTop="15dp"
            />

    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="SIGN UP" />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:paddingLeft="7dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/first_name"
            android:src= "@drawable/view_shape"
            android:background="@drawable/edit_text_background"
            android:text="" />
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:paddingLeft="7dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:background="@drawable/edit_text_background"
            android:text="" />
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:paddingLeft="7dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/address"
            android:background="@drawable/edit_text_background"
            android:text="" />
        <EditText
            android:id="@+id/etMobile"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:paddingLeft="7dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/mobile"
            android:background="@drawable/edit_text_background"
            android:text="" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:paddingLeft="7dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:background="@drawable/edit_text_background"
            android:text="" />
        <EditText
            android:id="@+id/etPss"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:textSize="14sp"
            android:paddingLeft="7dp"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"
            android:tooltipText=""
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text_background"
            android:text="" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="280dp"
            android:layout_height="35sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/view_shape"
            android:onClick="registerUser"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up" />
        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/by_signing_up_you_agree_with_the_terms_of_services_and_privacy_policy"
            android:textAlignment="center"
            android:textColor="#DEDEDE"
            android:textSize="9dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:onClick="launchLogin"
        android:layout_marginBottom="30dp"
        android:text="" />

</RelativeLayout>